Revision history for CourtIO-YAML-PP

{{$NEXT}}

"0.05  2020-04-03"

"0.04  2020-04-02"
  - Fix exception when no include directories were given

"0.03  2020-03-31"
  - Preserve YAML order

"0.02  2020-03-27"
  - Add Log4perl support and --trace flag
  - Add --json flag to produce JSON output instead of YAML

"0.01  2020-03-27"
  - Initial release